--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <h1>Teste</h1>
     <!-- Parte do botão -->
     <section id="Area-botao">
-        <article class="musica1"></article>
-        <article class="musica2"></article>
-        <article class="musica3"></article>
-        <article class="musica4"></article>
+        <div>
+            <ul></ul>
+        </div>
 
     </section>
 
