--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <section class="title">
-        <h1>Tesy</h1>
+        <h1>Listen 4 Chill</h1>
     </section>
 
 
@@ -26,8 +26,8 @@
 
 
 
-
-    <script src="./index.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+ <script src="./index.js" charset="utf-8"></script>
 </body>
 
 </html>
