added:more-styling-js-logics-some-animations

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
     </section>
 
     <section class="title-select">
-        <h1>Selecione Um Lofi</h1>
+        <h2>Selecione Um Lofi</h2>
     </section>
 
     <section class="musicas">
     <ul class="lista-musicas"></ul>
 </section>
 
+<section class="random-music">
+<button>Play random</button>
+</section>
 
-
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
- <script src="./index.js" charset="utf-8"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="./index.js" charset="utf-8"></script>
 </body>
 
 </html>
