--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
 
 <section class="random-music">
 <button>Play random</button>
+ <button class="seeBackgroundButtons">change backgrounds</button>
+
+        <div class="hiddenBackgrounds"> 
+        <button>color1</button>
+        <button>color2</button>
+        <button>color3</button>
+        <button>color4</button>
+        
+        </div>
 </section>
+
+ <section class="changingBackground">
+       
+    </section>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="./index.js" charset="utf-8"></script>
