play-random-button-back-background-button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button id="colorBlue">color2</button>
         <button id="colorAqua">color3</button>
         <button id="colorYellow">color4</button>
+        <button id="backColor">back Original Color</button>
     </div>
         </div>
 </section>
